crates/solidity/testing/snapshots/bindings_output/yul/catch_params/generated/0.5.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or AssemblyKeyword or BoolKeyword or BreakKeyword or ByteKeyword or BytesKeyword or CloseBrace or ContinueKeyword or DecimalLiteral or DoKeyword or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or EmitKeyword or FalseKeyword or FixedKeyword or ForKeyword or FunctionKeyword or HexLiteral or Identifier or IfKeyword or IntKeyword or MappingKeyword or NewKeyword or OpenBrace or OpenBracket or OpenParen or ReturnKeyword or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword or WhileKeyword.
    ╭─[input.sol:5:9]
    │
  5 │ ╭─▶         try service.test() {
    ┆ ┆   
 15 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ interface Service { function test() external; }
   │           ───┬───            ──┬─  
   │              ╰───────────────────── name: 1
   │                                │   
   │                                ╰─── name: 2
   │ 
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 3
 4 │     function test(Service service) public {
   │              ──┬─ ───┬─── ───┬───  
   │                ╰─────────────────── name: 4
   │                      │       │     
   │                      ╰───────────── ref: 1
   │                              │     
   │                              ╰───── name: 5
───╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ │     interface Service { function test() external; }
    │ │     ────────────────────────┬───────┬───────────────  
    │ │                             ╰───────────────────────── definiens: 1
    │ │                                     │                 
    │ │                                     ╰───────────────── definiens: 2
  2 │ ╭───▶ 
    ┆ ┆ ┆   
  4 │ │ ╭─▶     function test(Service service) public {
    │ │ │                     ───────┬───────  
    │ │ │                            ╰───────── definiens: 5
    ┆ ┆ ┆   
 15 │ │ ├─▶     }
    │ │ │           
    │ │ ╰─────────── definiens: 4
 16 │ ├───▶ }
    │ │         
    │ ╰───────── definiens: 3
────╯
